# cmakezero

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bvt-clang20.yml  bvt-gcc13.yml  bvt-gcc14.yml  bvt-msvc14.yml  cmake-multi-platform.yml  test-ci.yml
cmake/: CMakeLists.txt  CMakeLists.txt.single  mzcy_utils-beta.cmake  mzcy_utils.cmake  setup_gcc.cmake  zero.cmake
cmake/more/: gcc-setup.cmake
demo/use_zero/: CMakeLists.txt
demo/without_zero/: CMakeLists.txt
include/: fun_head_only.h  fun_s.h
source/EMPTY/: CMakeLists.txt
source/test1/: CMakeLists.txt  test1.cpp
source/test2/: CMakeLists.txt  test2.cpp  test3.cpp
source/test3_with_lib/: CMakeLists.txt  test3.cpp
source/test5_with_interface/: CMakeLists.txt  test5.cpp
source/test6/test6/: CMakeLists.txt
src/test0/: CMakeLists.txt
src/test1/: CMakeLists.txt  test1.cpp
src/test2/: CMakeLists.txt  hello.cpp  hello.h  main.cpp  test2.cpp  test2.h
src/test2/hello/: hello.cpp
src/test3_with_lib/: CMakeLists.txt  fun.cpp  test3.cpp
src/test3_with_lib/func_static/: CMakeLists.txt  func_static.cpp  func_static.h
src/test4_with_dll/: CMakeLists.txt  fun.cpp  test4.cpp
src/test4_with_dll/func_shared/: CMakeLists.txt  MY_API  func_shared.cpp  func_shared.h
src/test5_with_interface/: CMakeLists.txt  test5.cpp
src/test5_with_interface/func_interface/: CMakeLists.txt  func_interface.h
test/: CMakeLists.txt
